--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
-.mainHeader{
+body {
+    background-color: rgb(251, 253, 199);
+}
+
+.mainHeader {
     margin: 20px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -10,19 +14,33 @@
     border-radius: 40px 0 40px 0;
 }
 
-.list{
+.list {
     text-align: center;
-    line-height: 150px;
     color: rgb(168, 10, 92);
 }
 
-.listMember{
-    border: 1px solid rgb(168, 10, 92);
+.listMember {
     background-color: rgb(244, 210, 232);
     width: 40%;
     margin: auto;
     margin-top: 30px;
     cursor: pointer;
-
+    line-height: 150px;
+    opacity: 0.8;
 }
 
+.link {
+    color: rgb(168, 10, 92);
+    text-decoration: none;
+}
+
+.link:hover {
+    color: yellow;
+    font-size: 150%;
+    transition: 0.5s;
+}
+
+.listMember:hover {
+    opacity: 1;
+    transition: 0.5s;
+}
